--- a/Gitproj01/pom.xml
+++ b/Gitproj01/pom.xml
@@ -4,7 +4,14 @@
   <artifactId>Gitproj01</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <packaging>war</packaging>
-  <dependencies><!-- https://mvnrepository.com/artifact/org.springframework/spring-context-support -->
+  <dependencies>
+	  <dependency>
+    <groupId>jakarta.servlet</groupId>
+    <artifactId>jakarta.servlet-api</artifactId>
+    <version>6.1.0-M2</version>
+    <scope>provided</scope>
+</dependency>
+<!-- https://mvnrepository.com/artifact/org.springframework/spring-context-support -->
 <dependency>
     <groupId>org.springframework</groupId>
     <artifactId>spring-context-support</artifactId>
